--- a/lib/premiere_ecoute_web/controllers/static/changelog/html/entry.html.heex
+++ b/lib/premiere_ecoute_web/controllers/static/changelog/html/entry.html.heex
@@ -1,6 +1,6 @@
 <div class="static-page">
   <div class="static-container-wide">
-    <a href="/changelog" class="static-back-link">← Changelog</a>
+    <a href="/changelog" class="static-back-link">← {gettext("Changelog")}</a>
 
     <h1 class="static-title-large">{@entry.title}</h1>
     <div class="static-tags">
