--- a/lib/premiere_ecoute_web/controllers/static/changelog/html/index.html.heex
+++ b/lib/premiere_ecoute_web/controllers/static/changelog/html/index.html.heex
@@ -1,7 +1,7 @@
 <div class="static-page">
   <div class="static-container-wide">
-    <a href="/" class="static-back-link">← Home</a>
-    <h1 class="static-title" style="margin-bottom: 2rem; padding-bottom: 1rem;">Premiere Ecoute Changelog</h1>
+    <a href="/" class="static-back-link">← {gettext("Home")}</a>
+    <h1 class="static-title" style="margin-bottom: 2rem; padding-bottom: 1rem;">{gettext("Premiere Ecoute Changelog")}</h1>
 
     <%= for entry <- @changelog do %>
       <div class="changelog-entry">
