--- a/lib/premiere_ecoute_web/controllers/static/legal/html/document.html.heex
+++ b/lib/premiere_ecoute_web/controllers/static/legal/html/document.html.heex
@@ -1,6 +1,6 @@
 <div class="static-page">
   <div class="static-container-wide">
-    <a href="/" class="static-back-link">← Homepage</a>
+    <a href="/" class="static-back-link">← {gettext("Homepage")}</a>
 
     <h1 class="static-title-large">{@document.title}</h1>
     <div class="static-tags">
