--- a/lib/premiere_ecoute_web/live/accounts/account_live.html.heex
+++ b/lib/premiere_ecoute_web/live/accounts/account_live.html.heex
@@ -40,7 +40,7 @@
                       <%= if @current_user do %>
                         #{@current_user.id}
                       <% else %>
-                        N/A
+                        {gettext("N/A")}
                       <% end %>
                     </p>
                   </div>
@@ -74,7 +74,7 @@
                           {String.capitalize(to_string(@current_user.role))}
                         </span>
                       <% else %>
-                        <p class="text-sm text-gray-400">N/A</p>
+                        <p class="text-sm text-gray-400">{gettext("N/A")}</p>
                       <% end %>
                     </div>
                   </div>
